v3/crates/engine/tests/snapshots/execution__common__ir_execute__models__select_many__order_by_admin.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "AuthorMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "Authors",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "order_by",
                                ),
                            ): Literal(
                                Array [
                                    Object {
                                        "first_name": String("Desc"),
                                    },
                                ],
                            ),
                        },
                        filter: None,
                        order_by: [],
                        limit: Some(
                            1,
                        ),
                        offset: Some(
                            1,
                        ),
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "author_id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "author_id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "first_name",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "first_name",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
            Alias(
                Identifier(
                    "ArticlesByAuthorMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "ArticlesByAuthor",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "author_id",
                                ),
                            ): Literal(
                                Number(2),
                            ),
                            ArgumentName(
                                Identifier(
                                    "order_by",
                                ),
                            ): Literal(
                                Array [
                                    Object {
                                        "article_id": String("Desc"),
                                    },
                                ],
                            ),
                        },
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "article_id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "article_id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
        },
    },
)
